--- a/css/style.css
+++ b/css/style.css
@@ -28,16 +28,18 @@
     font-family: bryant-web, sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-family: ;
     src: url("https://use.typekit.net/xyk3axk.css");
 }
 
 body {
     font-family: bryant-web, sans-serif;
     color: #68C5AE;
-    background-color: #11294C;
+    /* background-color: #11294C; */
+    background-color: transparent;
+
     text-align: center;
     margin: 0;
+
 }
 
 h1, p {
@@ -46,4 +48,9 @@ h1, p {
 
 h1 {
     margin: 4em 0 0 0;
+    font-weight: 400;
+}
+
+.hero {
+    background: url(img/cave.png);
 }
