--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,7 @@
 body {
     font-family: bryant-web, sans-serif;
     color: #68C5AE;
-    /* background-color: #11294C; */
-    background-color: transparent;
-
+    background-color: #11294C;
     text-align: center;
     margin: 0;
 
@@ -49,8 +47,4 @@ h1, p {
 h1 {
     margin: 4em 0 0 0;
     font-weight: 400;
-}
-
-.hero {
-    background: url(img/cave.png);
 }
